
Tue Aug 29 13:34:23 EDT 1995	Paul Park	(pjpark@mit.edu)
	* kdb_dbm.c - Add routines to support serialization of the database
		context.  Clean up gcc -Wall complaints.

Thu Aug 24 18:54:51 1995  Theodore Y. Ts'o  <tytso@dcl>

	* .Sanitize: Update file list

Fri Aug 18 17:27:20 EDT 1995	Paul Park	(pjpark@mit.edu)
	* kdb_dbm.c - Bump timestamp to the future if we can't discriminate
		between updates within a second.  Fix database rename.  Reopen
		database after put or delete.
	* t_kdb.c - Add test code to fork off a few processes to beat on the
		database.


Thu Aug 17 13:46:29 EDT 1995	Paul Park	(pjpark@mit.edu)
	* kdb_dbm.c - Remove argument from dbm_db_end_update().  It was never
		used.  Remove gen_dbsuffix() logic from dbm_db_end_update() and
		dbm_db_get_age().  This logic was incorrect (end_update) or
		unused (get_age).  Reorg db_init() to reflect change in
		dbm_db_get_age().


Wed Aug 16 03:10:57 1995  Chris Provenzano  <proven@mit.edu>

	* decrypt_key.c, encrypt_key.c
		Only save the salt data if salt type != 0.
	* kdb_dbm.c :
		Rewritten to NOT open/close the db for every transaction.

Tue Aug 15 14:25:42 EDT 1995	Paul Park	(pjpark@mit.edu)
	* kdb_xdr.c - Add krb5_dbe_find_keytype() and clean up gcc -Wall
		complaints.


Wed Aug 9 17:17:36 EDT 1995	Paul Park	(pjpark@mit.edu)
	* kdb_cpw.c - Add check for uniqueness of key or key/salt combo.  Don't
		generate a new key_data entry if one already exists.  Also,
		fill in the key_data list at the end so as not to overwrite
		already present data.
		- Free krbtgt_keyblock contents in add_key_rnd().
		- Put a "break" at the end of the KRB5_KDB_SALTTYPE_ONLYREALM
		  in add_key_pwd().  Also pass in key_salt to encrypt_key_data
		  always.
	* kdb_xdr.c - initialize retval to 0 in decode_mod_princ data.  This is
		questionable whether we should return an error if there's no
		mod_princ data.  Also, free the allocated mod_princ only if
		we allocated it and there's a failure.

