@@ -45,7 +45,6 @@ krb5_dbekd_decrypt_key_data(context, eblock, key_data, keyblock, keysalt)
     krb5_octet		* ptr;
 
     keyblock->magic = KV5M_KEYBLOCK;
-    keyblock->etype = ETYPE_UNKNOWN;
     keyblock->keytype = key_data->key_data_type[0];
 
     /* Decrypt key_data_contents */
